--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <script>
     //(/^[\d\+][\d\(\)\ -]{4,14}\d$/)
     class Validation1 {
-        constructor(telephon, date, email, domain) {
-            this.telephon = telephon;
-            this.date = date;
-            this.email = emai;
-            this.domain = domain;
-        }
+
+        telephon = '';
+        date = '';
+        email = '';
+        domain = '';
+
 
         static checkTelephone(telephon) {
             let valid = false;
